--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./scripts.js"></script>
+    <script src="./scripts.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container"></div>
 </body>
 </html>
