--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- title, author, the number of pages, and whether or not you have read the book. -->
+    <form action="" name="book-form" id="book-form">
+        <input type="text" name="title" id="title">
+        <input type="text" name="author" id="author">
+        <input type="number" name="pages" id="pages">
+        <input type="checkbox" name="read" id="read">
+        <button id="add-book">Add Book</button>
+    </form>
     <div id="container"></div>
 </body>
 </html>
