--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <!-- title, author, the number of pages, and whether or not you have read the book. -->
+    <button id="show-form">Add a Book</button>
     <form action="" name="book-form" id="book-form">
         <input type="text" name="title" id="title">
         <input type="text" name="author" id="author">
         <input type="number" name="pages" id="pages">
         <input type="checkbox" name="read" id="read">
-        <button id="add-book">Add Book</button>
+        <button id="add-book">Add</button>
     </form>
     <div id="container"></div>
 </body>
